--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,4 @@ services:
             dockerfile: Dockerfile
         volumes:
             -   ./screenshots:/app/screenshots
+        command: python3 main.py
