--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
             context: .
             dockerfile: Dockerfile
         volumes:
+            -   ./config:/app/config
             -   ./screenshots:/app/screenshots
         command: python3 main.py
